# bevy_outliner

./: CLAUDE.md  Cargo.toml  README.md  flake.nix
examples/: basic.rs  with_egui.rs
src/: components.rs  jfa_material.rs  lib.rs  plugin.rs  silhouette_material.rs
src/shaders/: jfa_composite.wgsl  jfa_dilate.wgsl  jfa_init.wgsl  jfa_init_compute.wgsl  jfa_step.wgsl  jfa_step_compute.wgsl  outline_silhouette.wgsl  silhouette.wgsl
