[package]
name = "bevy_outliner"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Jump Flood Algorithm based object outlining for Bevy"
repository = "https://github.com/yourusername/bevy_outliner"
keywords = ["bevy", "outline", "shader", "jfa", "gamedev"]
categories = ["game-development", "graphics", "rendering"]

[dependencies]
bevy = "0.18"
bytemuck = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bevy_egui = "0.39"

[features]
default = []
trace_tracy = ["bevy/trace_tracy"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "with_egui"
path = "examples/with_egui.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
